# quote

./: .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE_CONTEXT.md  FULL_RUN.md  Injection Examples - Sheet1.csv  LICENSE  PHASE0_REVIEW_REPORT.md  PHASE2_REVIEW.md  README.md  STAGING_ACTIVATIONS_SPEC.md  anecdotal_request_ids.md  build_test.md  docker-compose.user.yml  find_anecdotal_request_ids.md  phase0_activation_explorer_execution_checklist.md  phase0_activation_explorer_spec.md  phase0_spec_v2.md  phase1_hf_inference_review.md  phase1_spec.md  phase3_review_report.md  reset.sh  run.sh  setup.sh  versions.toml
.claude/: settings.local.json
backend/: .env.example  ARCHITECTURE.md  Cargo.toml  README.md  deploy.py  dockerfile  reset_migrations.sql  run_migration.sh  sample_payload.json  updated_sample_payload.json
backend/docs/: INGEST_API.md  updated_schema.dbml
backend/migrations/: 0001_new_schema.sql  0002_add_request_fields.sql  0003_fix_actions_schema.sql  0004_tokens_as_text_array.sql  0005_add_favorited_by.sql  0006_add_tags.sql  0007_add_discussions.sql  0008_add_collections.sql  0009_add_api_keys_auth.sql  0010_add_is_admin_column.sql  0011_add_public_collections.sql  0012_add_public_requests.sql  0013_add_activation_run_index.sql  0014_add_activation_run_previews.sql
backend/src/: lib.rs  main.rs  routes.rs  server.rs
backend/src/handlers/: activation_explorer.rs  auth.rs  collections.rs  discussions.rs  favorites.rs  health.rs  logs.rs  mod.rs  og.rs  playground.rs  tags.rs
backend/src/handlers/ingest/: mod.rs  payload.rs  persist.rs  to_response.rs  util.rs
backend/src/utils/: auth.rs  body_limit.rs  cache.rs  config.rs  error.rs  mod.rs  state.rs  telemetry.rs
cli/: Cargo.toml  README.md  build.rs  versions.toml
cli/src/: config.rs  error.rs  main.rs
cli/src/cli/: engine.rs  helpers.rs  init.rs  mod.rs  mod_commands.rs  version.rs
docs/: package-lock.json  package.json  vocs.config.ts
engine/inference/: FULLPASS_DEBUG.md  Makefile  README.md  pyproject.toml
engine/inference/src/: __init__.py
engine/inference/src/quote/: __init__.py  _build_hooks.py  config.py  generation.py  sae_server.py
engine/inference/src/quote/activations/: __init__.py  queries.py  schema.py  store.py
engine/inference/src/quote/api/: __init__.py  caller.py  core.py  hf_inference.py  sae_server.py
engine/inference/src/quote/api/openai/: __init__.py  fullpass_debug.py  hf_remote.py  local.py  remote.py  sae_remote.py
engine/inference/src/quote/backends/: __init__.py  huggingface.py  interface.py
engine/inference/src/quote/custom_arch/: __init__.py
engine/inference/src/quote/features/: __init__.py  neuronpedia.py  sae_extract.py
engine/inference/src/quote/hot/: execute_impl.py
engine/inference/src/quote/interp/: __init__.py  feature_extractor.py  sae_extract.py
engine/inference/src/quote/interpretability/: __init__.py  feature_extractor.py  sae_loader.py
engine/inference/src/quote/logs/: __init__.py  confidence.py  emit.py  logger.py  metrics.py
engine/inference/src/quote/mods/: manager.py  sdk_bridge.py
engine/inference/src/quote/pipelines/: __init__.py  text_gen_pipeline.py  token_gen_pipeline.py
engine/inference/src/quote/runtime/: __init__.py  config.py  generation.py
engine/inference/src/quote/server/: __init__.py  caller.py  core.py  router.py
engine/inference/src/quote/server/openai/: __init__.py  fullpass_debug.py  local.py  remote.py  sae_remote.py
engine/inference/src/quote/storage/activations/: __init__.py  queries.py  schema.py  store.py
engine/inference/typings/max/driver/: __init__.pyi
engine/sdk/: README.md  __init__.py  pyproject.toml
engine/sdk/quote_mod_sdk/: __init__.py  actions.py  flow.py  mod.py  self_prompt.py  serialization.py  tokenizer.py
engine/sdk/quote_mod_sdk/strategies/: README.md  __init__.py  base.py  compile.py  list_strategy.py  primitives.py  strategy_constructor.py
engine/shared/: LICENSE  README.md  pyproject.toml
engine/shared/src/shared/: conversation.py  types.py  utils.py
(+192 files in other folders)
