[package]
name = "thunder"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
thiserror = "1"
anyhow = "1"
tower-http = { version = "0.5", features = ["trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Authentication
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# HTTP client for external API calls
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tower = "0.5"
