[project]
name = "quote"
version = "0.4.3"
description = "Quote inference engine with modular token-level interventions for LLM generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shared==0.4.3",
    "quote_mod_sdk==0.4.3",
    "modal>=1.1.3",
    "max>=25.6.1",
    "modular>=25.6.1",
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
    "openai>=1.107.0",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0",
    "numpy>=2.3.4",
    "duckdb>=1.1.3",
    "pyarrow>=18.1.0",
    "jsonpath-ng>=1.7.0",
    "sae-lens>=6.30.2",
    "transformers>=4.56.2",
    "anthropic>=0.76.0",
]

[project.license]
file = "LICENSE"
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources.shared]
workspace = true

[tool.uv.sources.quote_mod_sdk]
workspace = true

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "quote*",
    "sdk*",
]

[tool.setuptools.cmdclass]
build_py = "quote._build_hooks.SkipRemoteBuildPy"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"

[tool.pyrefly]
infer-with-first-use = false
