[project]
name = "quote-mod-sdk"
version = "0.4.3"
description = "Lightweight SDK for authoring Quote pipeline mods."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shared==0.4.3",
]

[project.license]
file = "LICENSE"

[build-system]
requires = [
    "setuptools>=65",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "quote_mod_sdk*",
]

[tool.uv.sources.shared]
workspace = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
