[project]
name = "shared"
version = "0.4.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "max>=25.6.1",
]

[project.license]
file = "LICENSE"

[build-system]
requires = [
    "setuptools>=65",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "shared*",
]
